# Digraphs

./: .gitignore  README.md  TASK_SPEC.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: my_graphs.pkl
scripts/: render_readme_assets.py
src/digraph_enum/: __init__.py  cli.py  constraints.py  draw.py  graphs.py  tasks.py
tests/: conftest.py  test_canonical.py  test_constraints.py  test_draw.py  test_irene.py  test_tasks.py
tests/golden/: task1.json  task2.json
