[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digraph-enum"
version = "1.0.0"
description = "Enumerate 4-vertex digraphs (loops allowed) up to isomorphism under local induced-subgraph constraints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx==3.6.1",
    "numpy==1.26.4",
    "matplotlib==3.8.0",
]

[project.optional-dependencies]
test = ["pytest==8.2.0"]

[project.scripts]
digraph-enum = "digraph_enum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
